--- a/.github/workflows/deploy-production.yml
+++ b/.github/workflows/deploy-production.yml
@@ -12,15 +12,23 @@ jobs:
     steps:
     - name: Checkout code
       uses: actions/checkout@v4
+      with:
+        token: ${{ secrets.GITHUB_TOKEN }}
+        fetch-depth: 0
+        
+    - name: Configure git
+      run: |
+        git config --global user.email "action@github.com"
+        git config --global user.name "GitHub Action"
       
     - name: Setup Node.js
       uses: actions/setup-node@v4
       with:
-        node-version: '18'
+        node-version: '20'
         cache: 'npm'
         
     - name: Install dependencies
-      run: npm ci --production=false
+      run: npm install --legacy-peer-deps
       
     - name: Run tests and build
       run: |
@@ -31,7 +39,6 @@ jobs:
       run: |
         ls -la dist/
         test -f dist/index.js || exit 1
-        test -f dist/public/index.html || exit 1
         
     - name: Deploy to Namecheap VPS
       uses: appleboy/ssh-action@v1.0.0
@@ -69,13 +76,18 @@ jobs:
             git reset --hard origin/main
           else
             echo "📥 Cloning repository..."
-            git clone https://github.com/sajidabbas3156/Ola-laundry-master.git $APP_DIR
+            git clone https://github.com/sajidabbas3156/Olalaundry-prod.git $APP_DIR
             cd $APP_DIR
           fi
           
+          # Set environment variables
+          export NODE_ENV=production
+          export PORT=5000
+          export JWT_SECRET="${{ secrets.JWT_SECRET }}"
+          
           # Install dependencies and build
           echo "📦 Installing dependencies..."
-          npm ci --production=false
+          npm install --legacy-peer-deps
           
           echo "🔨 Building application..."
           npm run build
@@ -122,7 +134,7 @@ jobs:
           }
           
           # Check health endpoint
-          curl -f http://localhost:3000/health || {
+          curl -f http://localhost:5000 || {
             echo "❌ Health check failed"
             pm2 logs $APP_NAME --lines 20
             exit 1
@@ -145,7 +157,7 @@ jobs:
           cd /var/www/olalaundry
           if [ -f "scripts/smoke-test.sh" ]; then
             echo "🧪 Running smoke tests..."
-            ./scripts/smoke-test.sh https://www.olalaundry.com || echo "⚠️ Some smoke tests failed"
+            ./scripts/smoke-test.sh http://localhost:5000 || echo "⚠️ Some smoke tests failed"
           else
             echo "⚠️ Smoke test script not found"
           fi
@@ -169,7 +181,7 @@ jobs:
           pm2 status
           echo ""
           echo "Health Check:"
-          curl -s http://localhost:3000/health | jq . || echo "Health check failed"
+          curl -s http://localhost:5000 | head -5 || echo "Health check failed"
           echo ""
           echo "Recent Logs:"
           pm2 logs olalaundry --lines 10 --nostream
